bitstruct/tests/ui/msb_before_lsb.stderr
error: least significant bit must be specified before most significant bit
 --> $DIR/msb_before_lsb.rs:5:30
  |
5 |         field1: u8 = 19 .. 10;
  |                              ^
